<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/lblCadastraUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="80dp"
        android:text="@string/usu_rio"
        app:layout_constraintEnd_toStartOf="@+id/txtCadastraUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:text="@string/cadastre_se"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/lblConfirmaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="28dp"
        android:text="@string/confirmar_senha"
        app:layout_constraintEnd_toStartOf="@+id/txtConfirmaSenha"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="92dp"
        android:text="@string/senha"
        app:layout_constraintEnd_toStartOf="@+id/txtCadastraSenha"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblConfirmaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="36dp"
        android:text="@string/cofirmar_email"
        app:layout_constraintEnd_toStartOf="@+id/txtConfirmaEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCadastraEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="92dp"
        android:text="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/txtCadastraEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCadastraUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <EditText
        android:id="@+id/txtCadastraEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailConf"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtConfirmaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailConf2"
        android:inputType="textEmailAddress"
        android:labelFor="@id/lblConfirmaEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCadastraSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/senhaConf"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/lblSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtConfirmaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senhaConf2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>